--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Hello Coursera </title>
+    <title>Hello Coursera Students !</title>
   </head>
   <body>
     <p>Hello Coursera</p>
